[package]
name = "k8s-pause-verify"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "pleme-io GitHub Action — assert pause-contract invariants on a paused-first ARC runner pool"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/k8s-pause-verify"

[[bin]]
name = "k8s-pause-verify"
path = "src/main.rs"

[dependencies]
pleme-actions-shared = { git = "https://github.com/pleme-io/pleme-actions-shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[lints.clippy]
pedantic = "warn"
